[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/actors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/actors/enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://shaders/ReplaceColors.shader" type="Shader" id=3]
[ext_resource path="res://scenes/effects/dificulty_num/DificultyNum.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/actors/enemies/life_bar/life_bar-void.png" type="Texture" id=5]
[ext_resource path="res://scenes/actors/enemies/life_bar/life_bar-full.png" type="Texture" id=6]
[ext_resource path="res://sounds/sfx/footsteps_1.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/sfx/footsteps_2.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/sfx/footsteps_3.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/sfx/footsteps_4.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "win"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 2 ),
"transitions": PoolRealArray( 0.25, 0.25, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3.57628e-07, -3.57628e-07 ), Vector2( 0, -8 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 2, 0 ), Vector2( -4, 0 ), Vector2( 0, -4 ), Vector2( 0, 4 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 2, 2.1, 2.2, 2.3, 2.4, 2.5 ),
"transitions": PoolRealArray( 0.25, 0.25, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/c_1 = null
shader_param/c_2 = null
shader_param/c_3 = null
shader_param/r_1 = null
shader_param/r_2 = null
shader_param/r_3 = null
shader_param/u_tolerance = null

[sub_resource type="CircleShape2D" id=3]
radius = 56.0

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/c_1 = Color( 1, 0, 0, 1 )
shader_param/c_2 = Color( 0, 1, 0, 1 )
shader_param/c_3 = null
shader_param/r_1 = null
shader_param/r_2 = null
shader_param/r_3 = null
shader_param/u_tolerance = null

[node name="Enemy" groups=[
"Enemy",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Anim" parent="." index="0"]
anims/win = SubResource( 1 )

[node name="Sprite" parent="Pivot" index="0"]
material = SubResource( 2 )
position = Vector2( 0, 0 )

[node name="ViewArea" type="Area2D" parent="." index="3"]

[node name="Collision" type="CollisionShape2D" parent="ViewArea" index="0"]
shape = SubResource( 3 )

[node name="DificultyNum" parent="." index="5" instance=ExtResource( 4 )]

[node name="LifeBar" type="TextureProgress" parent="." index="6"]
margin_left = -8.0
margin_top = -11.0
margin_right = 8.0
margin_bottom = -8.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="CurrentWeapon" parent="." index="7"]
material = SubResource( 4 )

[node name="Footsteps1" type="AudioStreamPlayer2D" parent="." index="10"]
stream = ExtResource( 7 )
max_distance = 200.0

[node name="Footsteps2" type="AudioStreamPlayer2D" parent="." index="11"]
stream = ExtResource( 8 )
max_distance = 200.0

[node name="Footsteps3" type="AudioStreamPlayer2D" parent="." index="12"]
stream = ExtResource( 9 )
max_distance = 200.0

[node name="Footsteps4" type="AudioStreamPlayer2D" parent="." index="13"]
stream = ExtResource( 10 )
max_distance = 200.0
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
[connection signal="area_entered" from="ViewArea" to="." method="_on_ViewArea_area_entered"]
[connection signal="area_exited" from="ViewArea" to="." method="_on_ViewArea_area_exited"]
